--- a/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.ServiceBus/IFramework.MessageQueue.ServiceBus.csproj
@@ -61,7 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\iFramework\IFramework.csproj">
