--- a/Src/Sample/Sample.DTO/Sample.DTO.csproj
+++ b/Src/Sample/Sample.DTO/Sample.DTO.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="ErrorCode.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
