--- a/Src/Sample/Sample.CommandServiceTests/Sample.CommandServiceTests.csproj
+++ b/Src/Sample/Sample.CommandServiceTests/Sample.CommandServiceTests.csproj
@@ -35,6 +35,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.Unity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Unity.4.0.1\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
       <Private>True</Private>
@@ -48,6 +57,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -63,9 +73,15 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CommandBusTests.cs" />
+    <Compile Include="CommandHandlerTest.cs" />
+    <Compile Include="Projects\ProductCommandHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\iFramework.Plugins\iFramework.Infrastructure.EntityFramework\IFramework.EntityFramework4.5.csproj">
+      <Project>{c00b8ad6-47c2-4642-877e-2c759d05dcfe}</Project>
+      <Name>IFramework.EntityFramework4.5</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\iFramework.Plugins\IFramework.Log4Net\IFramework.Log4Net4.5.csproj">
       <Project>{8edc415a-2e94-402a-81f0-baf71a3bf6d7}</Project>
       <Name>IFramework.Log4Net4.5</Name>
@@ -74,17 +90,33 @@
       <Project>{081bb2eb-cc5d-4512-b61e-917cd7aa795d}</Project>
       <Name>IFramework.MessageQueue.ServiceBus4.5</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\iFramework.Plugins\IFramework.MessageStore.EntityFramework\IFramework.MessageStoring.EntityFramework4.5.csproj">
+      <Project>{78f72ab4-4f97-4b82-99ea-eb2d46cb63ca}</Project>
+      <Name>IFramework.MessageStoring.EntityFramework4.5</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\iFramework\IFramework4.5.csproj">
       <Project>{0b36292c-8849-441d-8fb8-a053d43a8e72}</Project>
       <Name>IFramework4.5</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sample.CommandHandler\Sample.CommandHandler.csproj">
+      <Project>{6760ea99-c3b6-4cb2-92eb-945ab3c3b04a}</Project>
+      <Name>Sample.CommandHandler</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.Command\Sample.Command.csproj">
       <Project>{1e6d9a9a-ab62-4450-b589-2f434462dfe9}</Project>
       <Name>Sample.Command</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Sample.Domain\Sample.Domain.csproj">
+      <Project>{f1f1b380-f3a0-463e-8686-3af27962c100}</Project>
+      <Name>Sample.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sample.DTO\Sample.DTO.csproj">
       <Project>{279b5ee0-22ca-4672-be92-9b6658dcdae3}</Project>
       <Name>Sample.DTO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sample.Persistence\Sample.Persistence.csproj">
+      <Project>{07b18368-3d3f-4c12-b2f1-e38fc709226a}</Project>
+      <Name>Sample.Persistence</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
